# sns-quill

./: Cargo.toml  README.md  canister_ids.json  message.json  msg.json  seed.txt
.github/workflows/: ci.yml  release.yml
candid/: governance.did  root.did  snsw.did  swap.did
src/: main.rs
src/commands/: account_balance.rs  configure_dissolve_delay.rs  execute_nervous_system_function.rs  generate.rs  get_nervous_system_parameters.rs  get_open_ticket.rs  get_proposal.rs  get_sale_ticket.rs  get_swap_refund.rs  list_deployed_snses.rs  list_nervous_system_functions.rs  list_neurons.rs  list_proposals.rs  make_proposal.rs  make_upgrade_canister_proposal.rs  mod.rs  nervous_system_parameters.rs  neuron_permission.rs  neuron_stake.rs  new_sale_ticket.rs  ownership_summary.rs  public.rs  qrcode.rs  refund.rs  refund_swap.rs  register_vote.rs  request_status.rs  send.rs  sns_canisters_summary.rs  sns_summary.rs  stake_maturity.rs  stake_neuron.rs  status.rs  summary.rs  swap.rs  transfer.rs
src/lib/: mod.rs  signing.rs
tests/: canister_ids.json
tests/commands/: account-balance.sh  configure-dissolve-delay-add-seconds.sh  configure-dissolve-delay-start-dissolving.sh  configure-dissolve-delay-stop-dissolving.sh  fixed-pipe.sh  get-nervous-system-parameters.sh  get-open-tocket.sh  get-sale-ticket.sh  get-sns-canisters-summary.sh  list-deployed-snses.sh  make-proposal.sh  make-upgrade-canister-proposal-with-arg.sh  make-upgrade-canister-proposal.sh  neuron-permission-add.sh  neuron-permission-remove.sh  neuron-stake-maturity.sh  neuron-stake-memo.sh  neuron-stake-no-amount.sh  new-sale-ticket.sh  public-ids-with-memo.sh  public-ids.sh  refund.sh  register-vote-no.sh  register-vote-yes.sh  sns-canisters-summary.sh  status.sh  summary.sh  swap.sh  transfer-e8s-2.sh  transfer-e8s.sh  transfer-token-and-e8s.sh  transfer-with-fees-and-memo.sh  transfer-with-fees.sh  transfer.sh
tests/outputs/: account-balance.txt  fixed-pipe.txt  get-nervous-system-parameters.txt  get-open-tocket.txt  get-sale-ticket.txt  get-sns-canisters-summary.txt  list-deployed-snses.txt  neuron-stake-memo.txt  public-ids-with-memo.txt  public-ids.txt  refund.txt  status.txt  summary.txt  transfer-e8s-2.txt  transfer-e8s.txt  transfer-token-and-e8s.txt  transfer-with-fees-and-memo.txt  transfer-with-fees.txt  transfer.txt
