[package]
name = "sns-quill"
version = "0.3.0"
authors = ["DFINITY Team"]
edition = "2018"

[[bin]]
name = "sns-quill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
bip39 = "1.0.1"
candid = "0.7.14"
clap = { version = "3.1.6", features = ["derive", "cargo"] }
flate2 = "1.0.22"
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = "0.15.0"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "93e5215ee70c6102834a9dbadf81a6a927724a3c" }
ic-nervous-system-common ={ git = "https://github.com/dfinity/ic", rev = "93e5215ee70c6102834a9dbadf81a6a927724a3c" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "93e5215ee70c6102834a9dbadf81a6a927724a3c" }
ic-sns-sale = { git = "https://github.com/dfinity/ic", rev = "93e5215ee70c6102834a9dbadf81a6a927724a3c" }
ic-types = "0.3.0"
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "93e5215ee70c6102834a9dbadf81a6a927724a3c" }
libsecp256k1 = "0.7.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
openssl = "0.10.32"
pem = "1.0.1"
rand = { version = "0.8.4", features = ["getrandom"] }
reqwest = "0.11.7"
sha2 = "0.10.2"
simple_asn1 = "0.6.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
tiny-hderive = "0.3.0"
tokio = { version = "1.2.0", features = [ "fs" ] }

[dev-dependencies]
tempfile = "3.3.0"

[features]
static-ssl = ["openssl/vendored"]
