[package]
name = "sns-quill"
version = "0.3.0"
authors = ["DFINITY Team"]
edition = "2018"
resolver = "2"

[[bin]]
name = "sns-quill"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.34"
base64 = "0.13.0"
bip39 = "1.0.1"
candid = "0.7.14"
clap = { version = "3.1.6", features = ["derive", "cargo"] }
dialoguer = "0.10.2"
flate2 = "1.0.22"
hex = {version = "0.4.2", features = ["serde"] }
ic-agent = "0.20.0"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-icrc1 = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
ic-types = "0.4.1"
k256 = { version = "0.11.5", features = ["pem", "pkcs8"] }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "d2564f5a929915b1f3588887d8b10004500f2ee2" }
num-bigint = { version = "0.4.3", features = ["serde"] }
openssl = "0.10.32"
pem = "1.0.1"
pkcs8 = { version = "0.9.0", features = ["pem", "encryption"] }
rand = { version = "0.8.5", features = ["getrandom"] }
reqwest = "0.11.7"
sha2 = "0.10.2"
serde = { version = "1.0.130", features = ["derive"] }
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
serde_json = "1.0.57"
tiny-hderive = "0.3.0"
tokio = { version = "1.2.0", features = [ "fs" ] }

[dev-dependencies]
tempfile = "3.3.0"

[features]
static-ssl = ["openssl/vendored"]
